--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
   - "3.5"
   - "3.6"
 install:
+  - pip install -r requirements.txt
   - pip install -r requirements_test.txt
 script:
   - make test
