--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install -r requirements_test.txt
+  - pip install coveralls
 script:
   - make test
 after_success:
